--- a/chat/templates/chat/login.html
+++ b/chat/templates/chat/login.html
@@ -1,110 +1,34 @@
-<link
-  rel="stylesheet"
-  href="https://fonts.googleapis.com/icon?family=Material+Icons"
-/>
-<link
-  rel="stylesheet"
-  href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css"
-/>
-<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+{% extends "base.html"%}
 
-<style>
-    .login{
-        display: flex;
-        flex-direction: column;
-    }
-  .page-content {
-    padding: 100px 100px;
-  }
-  .grey {
-    color: rgba(0, 0, 0, 0.5);
-    padding: 5px;
-  }
-  button { width: 200px;}
-</style>
-
-<!-- Always shows a header, even in smaller screens. -->
-<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-  <header class="mdl-layout__header">
-    <div class="mdl-layout__header-row">
-      <!-- Title -->
-      <span class="mdl-layout-title">
-       {% comment %} {% if request.user.is_authenticated%}
-        Willkommen, {{request.user.first_name}} {{request.user.last_name}} !
-        {% else %} {% endcomment %}
-        Willkommen. Bitte logge dich ein.
-        {% comment %} {% endif %} {% endcomment %}
-      </span>
-      <!-- Add spacer, to align navigation to the right -->
-      <div class="mdl-layout-spacer"></div>
-      <!-- Navigation. We hide it in small screens. -->
-      <nav class="mdl-navigation mdl-layout--large-screen-only">
-        <a class="mdl-navigation__link" href="">Link</a>
-        <a class="mdl-navigation__link" href="">Link</a>
-        <a class="mdl-navigation__link" href="">Link</a>
-        <a class="mdl-navigation__link" href="">Link</a>
-      </nav>
-    </div>
-  </header>
-  <div class="mdl-layout__drawer">
-    <span class="mdl-layout-title">Chatroom</span>
-    <nav class="mdl-navigation">
-      <a class="mdl-navigation__link" href="">Link</a>
-      <a class="mdl-navigation__link" href="">Link</a>
-      <a class="mdl-navigation__link" href="">Link</a>
-      <a class="mdl-navigation__link" href="">Link</a>
-    </nav>
-  </div>
-  <main class="mdl-layout__content">
-    <div class="page-content">
-     
-      {% comment %} {% if request.user.is_authenticated %}
-     
-      {% for message in messages %}
-      <div>
-        <span class="grey">[{{ message.created_at | date:"d.m.Y" }}]</span
-        >{{message.author.first_name}}: {{message.text}}
-      </div>
-      {%endfor%} {% endcomment %}
+{%block content%}
 {% if wrongPassword %}
-<p>Benutzername oder Passwrot ist falsch!</p>
+<p>Benutzername oder Passwort ist falsch!</p>
 {% endif %}
 
       <!-- Your content goes here -->
-      <form action="/login/" method="post">
+      <form action="/login/" method="POST">
         {% csrf_token %}
-        <div class="login">
-        <div
-          class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-          <input
-            class="mdl-textfield__input"
-            name="username"
-            type="text"
-            id="1"
-          />
-          <label class="mdl-textfield__label" for="sample3">Name</label>
-        </div>
-        <div
-        class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-        <input
-          class="mdl-textfield__input"
-          name="password"
-          type="password"
-          id="2"
-        />
-        <label class="mdl-textfield__label" for="sample3">Password</label>
-      </div>
-        <button
-          class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
-          Login
-        </button>
-    </div>
+        <input type="hidden" name="redirect" value="{{ redirect }}"/>
+            <div class="login">
+                 <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                     <input class="mdl-textfield__input" name="username" type="text" id="1"/>
+                     <label class="mdl-textfield__label" for="sample3">Name</label>
+                </div>
+                 <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                 <input
+                    class="mdl-textfield__input"
+                    name="password"
+                    type="password"
+                    id="2"
+                 />
+                  <label class="mdl-textfield__label" for="sample3">Password</label>
+                </div>
+                <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+                    Login
+                 </button>
+         </div>
       </form>
-      {% comment %} {% else %}
-      <h1>Nicht eingeloggt</h1>
-      <p>Du bist nicht eingeloggt. Bitte logge dich ein.<br>
-        Bitte klicke <a href="/login>">hier</a></p>
-      {% endif %} {% endcomment %}
-    </div>
-  </main>
-</div>
+
+      {% endblock %}
+    
+
