--- a/templates/base.html
+++ b/templates/base.html
@@ -1,37 +1,21 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <title>Chatroom</title>
 
-    <link
-  rel="stylesheet"
-  href="https://fonts.googleapis.com/icon?family=Material+Icons"
-/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
 <link
   rel="stylesheet"
   href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css"
 />
 <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 
-<style>
-  .page-content {
-    padding: 100px 100px;
-  }
-  .grey {
-    color: rgba(0, 0, 0, 0.5);
-    padding: 5px;
-  }
-  .login{
-    display: flex;
-    flex-direction: column;
-  }
-    button {
-    width: 200px;
- }
-  
-</style>
+
 </head>
 <body>
     
