--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,8 @@
-.page-content {
+
+
+ @media (min-width: 800px){
+
+  .page-content {
     padding: 100px 100px;
   }
   .grey {
@@ -11,4 +15,19 @@
   }
     button {
     width: 200px;
+ }
+ }
+
+
+ @media ( min-width: 250px){
+  .page-content {
+    padding: 50px 20px;
+  }
+  button {
+    width: 100px;
+ }
+
+ .link {
+  margin-top: 20px;
+ }
  }
