--- a/chat/templates/chat/signin.html
+++ b/chat/templates/chat/signin.html
@@ -1,6 +1,46 @@
 {% extends "base.html"%}
 
 {%block content%}
-
+{% if wrongRepeatPassword %}
+<p>Die Passwortfelder stimmen nicht überein!</p>
+{% endif %}
+<h1>Signin</h1>
+      <!-- Your content goes here -->
+      <form action="/signin/" method="POST">
+        {% csrf_token %}
+        <input type="hidden" name="redirect" value="{{ redirect }}"/>
+            <div class="login">
+                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                    <input class="mdl-textfield__input" name="username" type="text" id="1"/>
+                    <label class="mdl-textfield__label" for="sample3">Username</label>
+               </div>
+                 <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                     <input class="mdl-textfield__input" name="email" type="email" id="2"/>
+                     <label class="mdl-textfield__label" for="sample3">email</label>
+                </div>
+                
+                 <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                 <input
+                    class="mdl-textfield__input"
+                    name="password"
+                    type="password"
+                    id="3"
+                 />
+                  <label class="mdl-textfield__label" for="sample3">Password</label>
+                </div>
+                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                    <input
+                       class="mdl-textfield__input"
+                       name="repeat_password"
+                       type="password"
+                       id="4"
+                    />
+                     <label class="mdl-textfield__label" for="sample3">Repeat Password</label>
+                   </div>
+                <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+                    Sign in
+                 </button>
+         </div>
+      </form>
 
 {%endblock%}
