--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="{% static 'js/chat.js' %}"></script>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <title>Chatroom</title>
 
