--- a/templates/base.html
+++ b/templates/base.html
@@ -44,9 +44,9 @@
           <a class="mdl-navigation__link" href="">Link</a>
           <a class="mdl-navigation__link" href="">Link</a>
         </nav>
-     
+        {% if request.user.is_authenticated%}
         <a href="{% url 'logout' %}"> <i class="material-icons">logout</i></a>
-      
+        {% endif %}
       </div>
     </header>
     <div class="mdl-layout__drawer">
