--- a/static/css/style.css
+++ b/static/css/style.css
@@ -53,6 +53,16 @@
 }
 
 .profile {
-  width: 100px;
+  /* width: 100px; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 15px;
+  cursor: pointer;
+}
+
+.profile:hover {
+  color: blue;
+  font-weight: 600;
 }
  }
