--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,7 @@
     <div class="mdl-layout__drawer">
       <span class="mdl-layout-title">Chatroom</span>
       <nav class="mdl-navigation">
-        <a class="mdl-navigation__link" href="">Link</a>
+        <a class="mdl-navigation__link" href="">Link1</a>
         <a class="mdl-navigation__link" href="">Link</a>
         <a class="mdl-navigation__link" href="">Link</a>
         <a class="mdl-navigation__link" href="">Link</a>
