--- a/templates/base.html
+++ b/templates/base.html
@@ -19,14 +19,17 @@
 
 </head>
 <body>
-    
-
-
-
+  {% if not request.user.is_authenticated%} 
+<div class="headerLoggedOut">
+  MyChat
+</div>
+{% endif %}
+  {% if request.user.is_authenticated%}
 <!-- Always shows a header, even in smaller screens. -->
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
     <header class="mdl-layout__header">
       <div class="mdl-layout__header-row">
+       
         <!-- Title -->
         <span class="mdl-layout-title">
           {% if request.user.is_authenticated%}
@@ -44,10 +47,11 @@
           <a class="mdl-navigation__link" href="">Link</a>
           <a class="mdl-navigation__link" href="">Link</a>
         </nav>
-        {% if request.user.is_authenticated%}
+        <!-- {% if request.user.is_authenticated%} -->
         <a href="{% url 'logout' %}"> <i class="material-icons">logout</i></a>
-        {% endif %}
+        <!-- {% endif %} -->
       </div>
+      {% endif %}
     </header>
     <div class="mdl-layout__drawer">
       <span class="mdl-layout-title">Chatroom</span>
@@ -60,6 +64,7 @@
     </div>
     <main class="mdl-layout__content">
       <div class="page-content">
+      
     {% block content %}
     {% endblock %}
       </div>
