--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -1,22 +1,34 @@
 {% extends "base.html" %}
+{% load static %}
 {% block content %}
-<a href="{% url 'overview' %}"> <i class="material-icons">arrow_back</i></a>
+<div class="receiverInfo">
+  <a href="{% url 'overview' %}"> <i class="material-icons">arrow_back</i></a>
+  <img src="{% static 'img/benutzerA.png' %}">
+  <div>{{receiver}}</div>
+
+</div>
+
 {% if request.user.is_authenticated %}
 <div id="messageContainer">
   {% for message in messages %}
 
   {% if message.author.username == request.user.username %}
-    <div class="flipped">
+    <div class="flipped background_author">
       {% else %}
-      <div>
+      <div class="background_receiver">
         {% endif %}
-      <span class="grey">[{{ message.created_at | date:"d.m.Y" }}]</span>{{message.author}}: {{message.text}}
+      <!-- <span class="grey">[{{ message.created_at | date:"d.m.Y" }}]</span> -->
+      {{message.author}}: {{message.text}}
     </div>
   {% endfor %}
 </div>
 <script>
   window.currentUser = "{{ request.user.username }}";
+ 
+    let receiver = "{{ receiver }}";  // Wenn Sie nur den Benutzernamen ausgeben möchten.
+    console.log(receiver);
 </script>
+
 
 <!-- Your content goes here -->
 <form onsubmit="sendMessage(); return false;" method="post">
