--- a/chat/templates/chat/signin.html
+++ b/chat/templates/chat/signin.html
@@ -1,7 +1,7 @@
 {% extends "base.html"%}
 
 {%block content%}
-
+<a href="{% url 'login' %}"> <i class="material-icons">arrow_back</i></a>
 <h1>Signin</h1>
       <!-- Your content goes here -->
       <form onsubmit="signin(); return false;" method="POST">
