--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -18,7 +18,7 @@
       <div class="background_receiver">
         {% endif %}
       <!-- <span class="grey">[{{ message.created_at | date:"d.m.Y" }}]</span> -->
-      {{message.author}}: {{message.text}}
+       {{message.text}}
     </div>
   {% endfor %}
 </div>
