--- a/static/css/style.css
+++ b/static/css/style.css
@@ -98,8 +98,10 @@
 }
 
 .background_receiver {
+  float: left;
+  width: fit-content;
   margin: 5px 20px 5px 0;
-  /* width: 80vw; */
+  max-width: 80vw;
   padding: 10px;
 border-top-right-radius: 20px;
 border-bottom-right-radius: 20px;
@@ -110,14 +112,28 @@ background-color: #b3d4fc;
 }
 
 .background_author{
-
+float: right;
+width: fit-content;
   margin: 5px 0 5px 20px;
-  /* width: 80vw; */
+  max-width: 80vw;
   padding: 10px;
   background-color: #FDDBBC;
   border-top-right-radius: 20px;
 border-bottom-right-radius: 0px;
 border-bottom-left-radius: 20px;
 border-top-left-radius: 20px;
+}
+
+.time {
+  color: grey;
+  font-size:smaller;
+}
+#messageContainer {
+  text-align: right;
+}
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
 }
  }
