--- a/templates/base.html
+++ b/templates/base.html
@@ -42,10 +42,10 @@
         <div class="mdl-layout-spacer"></div>
         <!-- Navigation. We hide it in small screens. -->
         <nav class="mdl-navigation mdl-layout--large-screen-only">
+          <!-- <a class="mdl-navigation__link" href="">Link</a>
           <a class="mdl-navigation__link" href="">Link</a>
           <a class="mdl-navigation__link" href="">Link</a>
-          <a class="mdl-navigation__link" href="">Link</a>
-          <a class="mdl-navigation__link" href="">Link</a>
+          <a class="mdl-navigation__link" href="">Link</a> -->
         </nav>
         <!-- {% if request.user.is_authenticated%} -->
         <a href="{% url 'logout' %}"> <i class="material-icons">logout</i></a>
@@ -56,10 +56,12 @@
     <div class="mdl-layout__drawer">
       <span class="mdl-layout-title">Chatroom</span>
       <nav class="mdl-navigation">
-        <a class="mdl-navigation__link" href="">Link1</a>
+        {% for user in allUsers%}
+        <a class="mdl-navigation__link receiverInfo" href=""> <img src="{% static 'img/benutzerA.png' %}">{{user.username}}</a>
+        <!-- <a class="mdl-navigation__link" href="">Link</a>
         <a class="mdl-navigation__link" href="">Link</a>
-        <a class="mdl-navigation__link" href="">Link</a>
-        <a class="mdl-navigation__link" href="">Link</a>
+        <a class="mdl-navigation__link" href="">Link</a> -->
+        {% endfor %}
       </nav>
     </div>
     <main class="mdl-layout__content">
