--- a/templates/base.html
+++ b/templates/base.html
@@ -57,7 +57,7 @@
       <span class="mdl-layout-title">Chatroom</span>
       <nav class="mdl-navigation">
         {% for user in allUsers%}
-        <a class="mdl-navigation__link receiverInfo" href=""> <img src="{% static 'img/benutzerA.png' %}">{{user.username}}</a>
+        <a class="mdl-navigation__link userInfo" href=""> <img src="{% static 'img/benutzerA.png' %}">{{user.username}}</a>
         <!-- <a class="mdl-navigation__link" href="">Link</a>
         <a class="mdl-navigation__link" href="">Link</a>
         <a class="mdl-navigation__link" href="">Link</a> -->
