--- a/chat/templates/chat/overview.html
+++ b/chat/templates/chat/overview.html
@@ -1,7 +1,9 @@
 {% extends "base.html"%}
 {% load static %}
-{%block content%}
-
+{% block content %}
+<div class="communicate">
+  Wie schön, dass Du da bist! Wähle Dir einen Chat-Partner aus und texte ihn zu.
+</div>
 <div id="usersOverview">
   {% for user in allUsers %}
   <div class="profile" onclick="chooseChat('{{ user.id }}')">
