--- a/chat/templates/chat/signin.html
+++ b/chat/templates/chat/signin.html
@@ -1,6 +1,7 @@
 {% extends "base.html"%}
 
 {%block content%}
+<div class="mainContainer">
 <a href="{% url 'login' %}"> <i class="material-icons">arrow_back</i></a>
 <h1>Signin</h1>
       <!-- Your content goes here -->
@@ -44,5 +45,5 @@
                  </button>
          </div>
       </form>
-
+</div>
 {%endblock%}
