--- a/static/css/style.css
+++ b/static/css/style.css
@@ -152,7 +152,7 @@ border-top-left-radius: 20px;
   right: 0;
   text-align: right;
   padding: 70px 20px 20px 20px;
-  height: calc(80vh - 200px);
+  height: calc(80vh - 160px);
   overflow-y: auto;
 }
 .clearfix::after {
@@ -161,11 +161,43 @@ border-top-left-radius: 20px;
   display: table;
 }
 .messageInput {
+  display: flex;
+  align-items: center;
   position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
   z-index: 10;
-  padding: 10px ;
+  padding: 20px ;
+  justify-content: space-between;
+  background-color: whitesmoke;
 }
+.mdl-button--icon {
+  margin-left: 10px;  
+  display: none; 
+}
+.tick {
+  width: 15px;
+  padding-left: 5px;
+}
+.mainContainer {
+  padding: 20px;
+}
+
+.communicate {
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color:#3F51B5;
+  text-align: center;
+}
+
+form {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
+}
+
  }
