--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+    <link rel="icon" type="image/x-icon" href="{% static 'img/myfav.png' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <title>Chatroom</title>
 
